# safellm

./: CHANGELOG.md  DOCUMENTATION_UPDATES.md  EXTENDED_GUARDS.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  Spec_v1.md  TESTING.md  debug_business.py  fix_pipeline_tests.py  llm.txt  pyproject.toml  requirements-ci.txt  test_basic.py
.github/workflows/: ci.yml  windows-ci.yml
examples/: extended_guards_example.py  quickstart.py  simple_extended_demo.py
scripts/: OLLAMA_INTEGRATION.md  README.md  run_ci_checks.ps1  run_ci_checks.py  run_ci_checks.sh  test_with_ollama.py  test_with_ollama_simple.py  test_with_ollama_simple_clean.py
src/safellm/: __init__.py  context.py  decisions.py  guard.py  pipeline.py
src/safellm/guards/: __init__.py  business.py  format.py  html.py  injection.py  language.py  length.py  pii.py  privacy.py  profanity.py  rate_limit.py  schema.py  secrets.py  similarity.py  toxicity.py
src/safellm/utils/: __init__.py  patterns.py
tests/: __init__.py  test_comprehensive_coverage.py  test_edge_improvements.py  test_extended_guards.py  test_final_coverage.py  test_low_coverage_comprehensive.py  test_pipeline_coverage.py  test_specific_coverage.py
tests/unit/: __init__.py  test_business_guard.py  test_context.py  test_decisions.py  test_format_guard.py  test_html_guard.py  test_injection_guard.py  test_language_guard.py  test_length_guard.py  test_pii_guard.py  test_pipeline.py  test_privacy_guard.py  test_profanity_guard.py  test_rate_limit_guard.py  test_schema_guard.py  test_secrets_guard.py  test_similarity_guard.py  test_toxicity_guard.py
